Fixed header spacing selector, minor formatting change

--- a/Styles/app.css
+++ b/Styles/app.css
@@ -59,24 +59,25 @@ section {
     padding: 30px;
 }
 
-    #postList img,iframe {
-        max-width: 355px;
-    }
-
-    #postList h3 {
+    #frontpage h3 {
         margin-bottom: 15px;
     }
 
-    #postList ul {
-        list-style-type: none;
-    }
+  #postList img,iframe {
+      max-width: 355px;
+  }
 
-    #postList .post,li {
-        border: 3px solid #747371;
-        border-radius: 5px;
-        margin-bottom: 5px;
-        padding: 5px;
-    }
+
+  #postList ul {
+      list-style-type: none;
+  }
+
+  #postList .post,li {
+      border: 3px solid #747371;
+      border-radius: 5px;
+      margin-bottom: 5px;
+      padding: 5px;
+  }
 
 #postList textarea.editTextBox {
     display: none;
